Começo de novas edições de layout

--- a/src/input.css
+++ b/src/input.css
@@ -2,4 +2,4 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Aqui você pode adicionar regras globais, se precisar */
+/* aqui você pode adicionar estilos globais extras */
